tests/NormalTests/paczka2/big_fuzzy/62372555.err
Error in line 6: S365 S365 34,1
Error in line 24: S365 S424 42,5
Error in line 27: S365 A558 38,5
Error in line 79: uBXAlIJG25 S424 33,2
Error in line 72: s3EW5N A558 40,4
Error in line 86: s3EW5N S727 13,6
Error in line 103: uBXAlIJG25 S365 45,92
Error in line 104: uBXAlIJG25 S365 179,0
Error in line 100: CZvs9km3z S365 19,9
Error in line 117: Co2hRYo A558 -2,3
Error in line 116: CZvs9km3z S727 3,0
Error in line 112: ZS5vKg8kmAk A558 7,3
Error in line 120: ZS5vKg8kmAk S365 24,9
Error in line 111: Co2hRYo A558 55,1
Error in line 118: CZvs9km3z A558 13,1
Error in line 144: CZvs9km3z S424 30,3
Error in line 151: CZvs9km3z S365 21,9
Error in line 161: GcLd6ATB A558 2Z,7
Error in line 150: ZS5vKg8kmAk S365 95,0
Error in line 155: CZvs9km3z A558 49,5
Error in line 142: s3EW5N A558 13,8
Error in line 169: s3EW5N S727 25,0
Error in line 162: S365 A558 13,9
Error in line 171: s3EW5N S365 5,0
Error in line 172: S365 S424 14,7
Error in line 175: s3EW5N S727 -1,6
Error in line 158: GcLd6ATB S727 1405,6
Error in line 179: s3EW5N S365 2,98
Error in line 183: ZS5vKg8kmAk S727 85,6
Error in line 173: s3EW5N S727 17,9
Error in line 195: ZS5vKg8kmAk S365 -1,3
Error in line 186: s3EW5N S365 109,5
Error in line 199: s3EW5N A558 8,1
Error in line 202: CZvs9km3z A558 12,2
Error in line 185: ZS5vKg8kmAk S365 69,7
Error in line 203: CZvs9km3z S365 95,6
Error in line 206: CZvs9km3z A558 14,8
Error in line 209: CZvs9km3z S727 91,8
Error in line 204: s3EW5N S365 9,9
Error in line 214: s3EW5N S424 94,0
Error in line 189: GcLd6ATB S424 44,3
Error in line 217: s3EW5N A558 23,0
Error in line 228: GcLd6ATB S365 13,9
Error in line 220: Co2hRYo S365 42,1
Error in line 232: uBXAlIJG25 S424 81,%
